# ISA-VUT-BIT-2018

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  feedfile.txt  manual.docx
src/: Feed.cpp  Feed.h  Http.cpp  Http.h  SSLWrapper.cpp  SSLWrapper.h  Url.cpp  Url.h  debug.h  exceptions.cpp  exceptions.h  main.cpp  utils.cpp  utils.h
test/: test.sh
test/01_arguments/: duplicate_option.test  invalid_arg.test  multiple_urls.test  no_args.test  no_url_or_feedfile.test  url_and_feedfile.test  url_arg.test
test/02_connections/: fit.test  ieft.test  ieft2.test  invalid_certificate.test  seznam.test  the_register1.test  the_register2.test  the_register3.test  the_register4.test  what_if_xkcd.test  wikipedia.test  xkcd.test  xvavra20.test
test/03_http_errors/: 100.test  101.test  204.test  300.test  301.test  302.test  303.test  304.test  400.test  401.test  402.test  404.test  405.test  406.test  407.test  408.test  416.test  500.test  501.test  502.test  503.test  504.test  505.test
test/04_basic_feeds/: atom.out  atom.test  rss0.91.out  rss0.91.test  rss1.0.out  rss1.0.test  rss2.0.out  rss2.0.test
test/05_feed_options/: all_options.out  all_options.test  author.out  author.test  time.test  time_before_url.out  time_before_url.test  time_before_url_after.out  time_before_url_after.test
test/06_feedfile/: all_invalid.test  comments_after_url.out  comments_after_url.test  comments_only.test  empty.test  empty_lines.test  no_newline.test  one_invalid.test  some_invalid.out  some_invalid.test  urls_only.test
test/07_namespaces/: dc_no_ns.test  dublincore.test  rdf.test  rdf_no_ns.test
(+11 files in other folders)
